--- a/managementView/api/package.json
+++ b/managementView/api/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "pg": "^8.7.1",
+    "qrcode": "^1.5.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
