--- a/managementView/api/package.json
+++ b/managementView/api/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "qrcode": "^1.5.0",
     "rxjs": "~7.4.0",
