--- a/managementView/api/package.json
+++ b/managementView/api/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "qrcode": "^1.5.0",
